# snake-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  screen.rs  snake.rs
