[package]
name = "snake-rs"
version = "0.1.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
async-std = "1.13.0"
clap = {version="4.5.23", features = ["derive"]}
